chopp-ti/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: choppti-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: chopp-ti.techub.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chopp-ti
            port:
              number: 80
